# Infrastructure-Dashboard

./: .gitignore  ADC_ADS1263_EXECUTION_PLAN.md  AGENTS.md  CODEOWNERS  Makefile  README.md
apps/core-server-rs/: .env.example  AGENTS.md  Cargo.toml
apps/core-server-rs/openapi/: farm-dashboard.json
apps/core-server-rs/src/: api.rs  backup_bundle.rs  cli.rs  config.rs  core_node.rs  db.rs  device_catalog.rs  error.rs  ids.rs  json.rs  lib.rs  main.rs  node_agent_auth.rs  openapi.rs  presets.rs  state.rs  static_assets.rs  test_support.rs  time.rs
apps/core-server-rs/src/auth/: api_tokens.rs  mod.rs  password.rs
apps/core-server-rs/src/routes/: action_logs.rs  alarm_rules.rs  alarms.rs  analysis.rs  analytics.rs  annotations.rs  api_tokens.rs  auth.rs  backups.rs  backups_exports.rs  battery.rs  cloud_access.rs  connection.rs  controller_config.rs  dashboard.rs  deployments.rs  dev_activity.rs  discovery.rs  display_profiles.rs  external_devices.rs  forecast.rs  health.rs  incidents.rs  indicators.rs  map.rs  map_assets.rs  map_offline.rs  metrics.rs  mod.rs  node_sensors.rs  nodes.rs  outputs.rs  power_runway.rs  predictive.rs  renogy.rs  renogy_settings.rs  schedules.rs  sensors.rs  setup.rs  setup_daemon.rs  (+3 more)
apps/core-server-rs/src/services/: analytics_feeds.rs  battery_model.rs  cloud_sync.rs  deployments.rs  derived_sensors.rs  emporia.rs  emporia_ingest.rs  emporia_preferences.rs  external_devices.rs  forecasts.rs  incidents.rs  map_offline.rs  mdns_iotnode.rs  mod.rs  mqtt.rs  mqtt_status_ingest.rs  node_agent_resolver.rs  power_runway.rs  renogy_settings_apply.rs  restore_worker.rs  schedule_engine.rs  sensor_visibility.rs  virtual_sensors.rs
apps/core-server-rs/src/services/alarm_engine/: eval.rs  mod.rs  types.rs
apps/core-server-rs/src/services/analysis/: bucket_reader.rs  embeddings_refresh.rs  lake.rs  lake_inspector.rs  local_qdrant.rs  mod.rs  parquet_duckdb.rs  profiling.rs  qdrant.rs  replication.rs  security.rs  signal_semantics.rs
apps/core-server-rs/src/services/analysis/jobs/: alarm_rule_backtest_v1.rs  cooccurrence_v1.rs  correlation_matrix_v1.rs  embeddings_build_v1.rs  eval.rs  event_match_v1.rs  event_utils.rs  forecast_materialize_v1.rs  lake_backfill_v1.rs  lake_inspect_v1.rs  lake_parity_check_v1.rs  lake_replication_tick_v1.rs  matrix_profile_v1.rs  mod.rs  related_sensors_unified_v2.rs  related_sensors_v1.rs  runner.rs  store.rs  types.rs
apps/core-server-rs/src/services/analysis/stats/: correlation.rs  fdr.rs  mod.rs
apps/core-server-rs/src/services/analysis/tsse/: candidate_gen.rs  embeddings.rs  mod.rs  robust.rs  scoring.rs  types.rs
apps/core-server-rs/src/services/deployments/: bootstrap.rs  db.rs  jobs.rs  manager.rs  runner.rs  ssh.rs  types.rs  util.rs
apps/farmctl/: AGENTS.md  Cargo.toml  README.md
apps/farmctl/installer_launcher/: main.swift
apps/farmctl/src/: bootstrap_admin.rs  bundle.rs  bundle_node_overlay.rs  cli.rs  config.rs  config_cmd.rs  constants.rs  dev_activity.rs  dev_db.rs  dist.rs  health.rs  install.rs  launchd.rs  main.rs  migrations.rs  native.rs  native_deps.rs  net.rs  netboot.rs  node_deps.rs  paths.rs  privileged.rs  processes.rs  profile.rs  server.rs  service_user.rs  sysv_ipc.rs  uninstall.rs  utils.rs
apps/node-agent/: .env.example  AGENTS.md  README.md  pyproject.toml
apps/node-agent/app/: __init__.py  auth.py  bootstrap.py  build_info.py  config.py  display_ui.py  http_utils.py  main.py  observability.py  renogy_bt_service.py  schemas.py  ui.py
apps/node-agent/app/generated_api/generated_api/models/: action_log_response.py  adopt_request.py  adoption_candidate.py  adoption_token_request.py  adoption_token_response.py  alarm_event_response.py  alarm_response.py  alarm_rule_delete_response.py  alarm_rule_preview_request.py  alarm_rule_preview_response.py  alarm_rule_response.py  alarm_rule_stats_band_set.py  alarm_rule_stats_bands.py  alarm_rule_stats_request.py  alarm_rule_stats_response.py  alarm_rule_stats_sensor_response.py  analysis_job_cancel_response.py  analysis_job_create_request.py  analysis_job_create_response.py  analysis_job_error.py  analysis_job_event_public.py  analysis_job_events_response.py  analysis_job_progress.py  analysis_job_public.py  analysis_job_result_response.py  (+212 more)
apps/node-agent/app/hardware/: __init__.py  ads1263_hat.py  analog.py  background_sampler.py  gpio.py  mesh.py  renogy_bt2.py
apps/node-agent/app/routers/: __init__.py  config.py  display.py  mesh.py  provisioning.py  renogy.py  root.py  simulation.py  status.py
apps/node-agent/app/services/: ble_provisioning.py  config_store.py  discovery.py  latency_probe.py  node_forwarder_client.py  output_listener.py  provisioning.py  publisher.py  simulator.py
apps/node-agent/app/utils/: __init__.py  systemd.py
apps/node-agent/scripts/: node-agent-logrotate.sh  node-agent-optional-services.py  node-agent-python.sh  verify_backups.py
apps/node-agent/storage/: node_config.example.json
apps/node-agent/systemd/: node-agent-backup-verify.service  node-agent-backup-verify.timer  node-agent-logrotate.service  node-agent-logrotate.timer  node-agent-optional-services.path  node-agent-optional-services.service  node-agent.env.sample  node-agent.service  node-forwarder.service  renogy-bt.service
apps/node-agent/systemd/logrotate/: node-agent
apps/node-agent/tests/: conftest.py  test_ads1263_hat.py  test_app.py  test_background_sampler.py  test_current_loop_depth.py  test_display.py  test_latency_probe.py  test_mesh.py  test_mesh_pair_cli.py  test_pulse_delta.py  test_renogy_bt2.py  test_sensor_type_aliases.py  test_simulator.py  test_systemd_notifier.py  test_validation_smoke.py
apps/node-forwarder/: Cargo.toml
apps/node-forwarder/src/: config.rs  http.rs  main.rs  mqtt.rs  spool.rs
apps/telemetry-sidecar/: Cargo.toml  README.md  build.rs
apps/telemetry-sidecar/src/: ack.rs  config.rs  core_status.rs  grpc.rs  ingest.rs  main.rs  mqtt.rs  pipeline.rs  predictive_feed.rs  telemetry.rs
apps/telemetry-sidecar/src/ingest/: db.rs  ingestor.rs  rolling.rs  state.rs  tests.rs  types.rs
(+1083 files in other folders)
