[package]
name = "farmctl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
get_if_addrs = "0.5"
hex = "0.4"
libc = "0.2"
pbkdf2 = "0.12"
plist = "1"
postgres = "0.19"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tar = "0.4"
tempfile = "3"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
