[package]
name = "node-forwarder"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Node-local telemetry durability + replay forwarder (append-only segment spool + ACK)"

[dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
crc32c = "0.6"
futures = "0.3"
libc = "0.2"
rumqttc = "0.25.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
